--- a/templates/header.html
+++ b/templates/header.html
@@ -14,10 +14,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <!-- Menu Link -->
-                <li><a href="index.html">Home</a></li>
-                <li><a href="mainvis.html">Incidents</a></li>
-                <li><a href="textvis.html">Incident Logs</a></li>
-                <li><a href="index.html">Process Book</a></li>
+                <li><a href="index.html">Overview</a></li>
+                <li><a href="map.html">Incidents</a></li>
+                <li><a href="text.html">Incident Logs</a></li>
+                <li><a href="processbook.html">Process Book</a></li>
             </ul>
         </div>
     </div>
