--- a/v1/css/style.css
+++ b/v1/css/style.css
@@ -37,7 +37,7 @@ h1,h2,h3,h4{
     font: 10px sans-serif;
 }
 .timeline-axis title {
-    font-size: 10px sans-serif;
+    font-size: 10px;
 }
 
 .timeline-axis path,
@@ -86,4 +86,30 @@ h1,h2,h3,h4{
 .force-layout-link {
     stroke: #999;
     stroke-opacity: .6;
+}
+.force-layout-legend-labels{
+    font-size: 10px;
+}
+
+/*********************/
+/*  TOOLTIP OVERLAY  */
+/*********************/
+
+.tooltip-title {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: 600;
+}
+
+.d3-tip {
+    line-height: 1;
+    padding: 12px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 2px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+
 }
