Updated process book link

--- a/v1/templates/header.html
+++ b/v1/templates/header.html
@@ -18,7 +18,7 @@
                 <li><a href="map.html">Where</a></li>
                 <li><a href="what.html">What</a></li>
                 <li><a href="how.html">How</a></li>
-                <li><a href="processbook.html">Process Book</a></li>
+                <li><a href="01_Process _Book.pdf" target="_blank">Process Book</a></li>
             </ul>
         </div>
     </div>
