--- a/v2/css/style.css
+++ b/v2/css/style.css
@@ -78,6 +78,11 @@ h1,h2,h3,h4{
     vertical-align: middle;
 }
 
+.fact {
+    background-color: #efefef;
+    margin: 10px;
+    padding: 10px;
+}
 
 
 
