--- a/v2/templates/header.html
+++ b/v2/templates/header.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Ukraine IED Incidents</a>
+            <a class="navbar-brand" href="#">Ukraine Improvised Explosive Device Incidents</a>
         </div>
 
 
