--- a/v2/templates/header.html
+++ b/v2/templates/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+ <nav class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -7,19 +7,51 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Ukraine Improvised Explosive Device Incidents</a>
+            <span class="navbar-brand">Ukraine<small>Improvised Explosive Device Incidents</small></span>
+
         </div>
 
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <!-- Menu Link -->
-                <li><a href="index.html">Who/Why</a></li>
-                <li><a href="map.html">Where</a></li>
-                <li><a href="what.html">What</a></li>
-                <li><a href="how.html">How</a></li>
-                <li><a href="01_Process _Book.pdf" target="_blank">Process Book</a></li>
+                <li class="active">
+                    <a href="index.html">
+                        <div class="button-line"></div>
+                        <div class="hover-color"></div>
+                        <span>Why</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="map.html">
+                        <div class="button-line"></div>
+                        <div class="hover-color"></div>
+                        <span>Where</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="what.html">
+                        <div class="button-line"></div>
+                        <div class="hover-color"></div>
+                        <span>What</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="how.html">
+                        <div class="button-line"></div>
+                        <div class="hover-color"></div>
+                        <span>How</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="01_Process _Book.pdf" target="_blank">
+                        <div class="button-line"></div>
+                        <div class="hover-color"></div>
+                        <span>Process book</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
-</nav>
+ </nav>
+
