--- a/v2/templates/header.html
+++ b/v2/templates/header.html
@@ -15,28 +15,28 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <!-- Menu Link -->
-                <li class="active">
+                <li id="index_page_menu">
                     <a href="index.html">
                         <div class="button-line"></div>
                         <div class="hover-color"></div>
                         <span>Why</span>
                     </a>
                 </li>
-                <li>
+                <li id="where_page_menu">
                     <a href="map.html">
                         <div class="button-line"></div>
                         <div class="hover-color"></div>
                         <span>Where</span>
                     </a>
                 </li>
-                <li>
+                <li id="what_page_menu">
                     <a href="what.html">
                         <div class="button-line"></div>
                         <div class="hover-color"></div>
                         <span>What</span>
                     </a>
                 </li>
-                <li>
+                <li id="how_page_menu">
                     <a href="how.html">
                         <div class="button-line"></div>
                         <div class="hover-color"></div>
