--- a/v2/css/style.css
+++ b/v2/css/style.css
@@ -8,6 +8,28 @@ body{
 #body-container{
     margin-top: 50px;
 }
+
+#home-intro{
+
+}
+
+.bgimagerow{
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+.bgimage {
+    background-image: url('../img/pg-26-ukraine-getty.png');
+    background-size: 100%;
+    height: 338px;
+    padding-right: 0px;
+    padding-left: 0px;
+}
+.bgimage-inside {
+    height: 338px;
+    background: linear-gradient(to right, #14babd 0%, rgba(20, 186, 189, 0.3) 50%, rgba(20, 186, 189, 0) 100%) !important;
+}
+
 .navbar {
     background-color: #005BBB;
     border-radius: 0px;
