--- a/v2/templates/header.html
+++ b/v2/templates/header.html
@@ -43,11 +43,11 @@
                         <span>How</span>
                     </a>
                 </li>
-                <li>
-                    <a href="01_Process _Book.pdf" target="_blank">
+                <li id="process_menu">
+                    <a href="process.html">
                         <div class="button-line"></div>
                         <div class="hover-color"></div>
-                        <span>Process book</span>
+                        <span>Process</span>
                     </a>
                 </li>
             </ul>
