--- a/v2/css/style.css
+++ b/v2/css/style.css
@@ -186,10 +186,10 @@ h1,h2,h3,h4{
 }
 
 .factbox{
-    background: linear-gradient(to top, #14babd 10%, #005BBB) !important;;
+    background: linear-gradient(to top, #14babd 10%, #005BBB) !important;
     margin-right: 0px;
     margin-left: 0px;
-    color: rgba(255, 255, 255, 0.9);;
+    color: rgba(255, 255, 255, 0.9);
 }
 .factbutton{
     /*background-color: rgba(0, 0, 0, 0.08);*/
@@ -197,8 +197,11 @@ h1,h2,h3,h4{
 .fact {
     /*background-color: #efefef;*/
     /*margin: 10px;*/
-    padding: 10px;
+    background: linear-gradient(to top, #14babd 10%, #005BBB) !important;
+    color: rgba(255, 255, 255, 0.9);;
+    padding: 15px;
     text-align:justify;
+    height: 220px;
 }
 
 
