--- a/v2/css/how.css
+++ b/v2/css/how.css
@@ -13,6 +13,7 @@
 
 .text-vis-container{
     background-color: #e9f0f5;
+    padding-left: 10px;
 }
 
 /*******************************************************************/
@@ -108,6 +109,7 @@
     border-radius: 0.25em;
     padding: 10px;
     box-shadow: 0 3px 0 #d7e4ed;
+    margin-right: 10px;
 }
 .cd-timeline-content:after {
     content: "";
