Changed background color for incident text bullets

--- a/v2/css/sankeyStyle.css
+++ b/v2/css/sankeyStyle.css
@@ -32,3 +32,9 @@ body {
     width: 20px;
     height: 20px;
 }
+
+
+.sankey-vis-container{
+    background-color: #e9f0f5;
+    padding-left: 10px;
+}
