--- a/v2/css/how.css
+++ b/v2/css/how.css
@@ -14,6 +14,7 @@
 .text-vis-container{
     background-color: #e9f0f5;
     padding-left: 10px;
+    padding-top:5px;
 }
 
 .important-word{
@@ -26,6 +27,10 @@
     padding-left: 0px;
     padding-top: 10px;
 
+}
+.text-vis-notes{
+    padding-top: 10px;
+    padding-left: 5px;
 }
 
 /*******************************************************************/
@@ -283,7 +288,8 @@
 }
 
 .range.range-primary input[type="range"]::-webkit-slider-thumb {
-    background-color: rgb(66, 139, 202);
+    background-color: rgb(3, 20, 71);
+    /*background-color: rgb(66, 139, 202);*/
 }
 .range.range-primary input[type="range"]::-moz-range-thumb {
     background-color: rgb(66, 139, 202);
