--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row footer-row">
             <div class="col-sm-12">
-                <p>Created by Valérie Lavigne, Marius Panga, and Shivas Jayaram for Harvard University CS171 2016 Data Visualization class</p>
+                <p>Created by Valérie Lavigne, Marius Panga, and Shivas Jayaram for Harvard University CS171 2016 Visualization class</p>
             </div>
         </div>
     </div>
