--- a/templates/header.html
+++ b/templates/header.html
@@ -50,6 +50,13 @@
                         <span>Process</span>
                     </a>
                 </li>
+                <li>
+                    <a href="process.html" target="_blank">
+                        <div class="button-line"></div>
+                        <div class="hover-color"></div>
+                        <span><i class="fa fa-info-circle" aria-hidden="true"></i></span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
