Screen cast links updated

--- a/templates/header.html
+++ b/templates/header.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="process.html" target="_blank">
+                    <a href="https://youtu.be/x-oR9qGgtNk" target="_blank">
                         <div class="button-line"></div>
                         <div class="hover-color"></div>
                         <span><i class="fa fa-info-circle" aria-hidden="true"></i></span>
